# NBodySimulator

./: CMakeLists.txt  README.md
data/: output_cu.txt  output_py.txt
python_code/: cuda_eval.py  evaluate.py  nbody.py  output.txt  simulator.py
scr/: nbody.cu
src/: nbody.cu  nbody_not_opt.cu
